--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holly Fasching Photography</title>
-    <link rel="icon" type="image/x-icon" href="./images/logo.png">
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
@@ -15,7 +15,7 @@
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="index.html" class="logo"><img src="./images/samplelogo.jpg"></a>
+                <a href="index.html" class="logo"><img src="/images/samplelogo.jpg"></a>
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="image-center">
-            <img src="./images/people-32.jpg">
+            <img src="/images/people-32.jpg">
         </div>
         <div class="site-footer">
             <p>The Planet and its People.</p>
