--- a/pages/about.html
+++ b/pages/about.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>  
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>  
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -23,17 +23,17 @@
                 </div>             
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="../pages/people.html"><p>People</p></a>
-                    <a href="../pages/planet.html"><p>Planet</p></a>
-                    <a href="../pages/film.html"><p>Film</p></a>
-                    <a href="../pages/design.html"><p>Design</p></a>
-                    <a href="../pages/about.html"><p>About</p></a>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
         <div class="text-viewport">
             <div class="text-wrap">
-                <img src="../images/me-2-2.jpg">
+                <img src="/images/me-2-2.jpg">
                 <h2>For the spirit of adventure</h2>
                 <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon to the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection—in the wild, through photographs, and with storytelling.</p>
                 <p>For the last five years, I have had the privilege to connect with my clients and tell their stories, and I’d love to be a part of yours. Contact me for more information on events, elopements, portraits, creative shoots, and conservation work anywhere in the U.S.!</p>
