--- a/pages/design.html
+++ b/pages/design.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>             
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>             
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -23,11 +23,11 @@
                 </div>              
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="../pages/people.html"><p>People</p></a>
-                    <a href="../pages/planet.html"><p>Planet</p></a>
-                    <a href="../pages/film.html"><p>Film</p></a>
-                    <a href="../pages/design.html"><p>Design</p></a>
-                    <a href="../pages/about.html"><p>About</p></a>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
@@ -37,18 +37,18 @@
                 <p>Original illustrations in screen and relief printing.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/prints_vultureredhead.jpg">
+                        <img src="/images/prints_vultureredhead.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/prints_brownthrasher.jpg">
+                        <img src="/images/prints_brownthrasher.jpg">
                     </div>
                 </div>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/prints_birdswillcall.jpg">
+                        <img src="/images/prints_birdswillcall.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/prints_downy.png">
+                        <img src="/images/prints_downy.png">
                     </div>
                 </div>
             </div>
@@ -57,10 +57,10 @@
                 <p>Experimental packaging design project for a concept makeup brand.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/ocellus-1.jpg">
+                        <img src="/images/ocellus-1.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/ocellus-2.jpg">
+                        <img src="/images/ocellus-2.jpg">
                     </div>
                 </div>
             </div>
@@ -69,10 +69,10 @@
                 <p>A type specimen for the font, Redaction.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/redaction-2.jpg">
+                        <img src="/images/redaction-2.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/redaction-1.jpg">
+                        <img src="/images/redaction-1.jpg">
                     </div>
                 </div>
             </div>
@@ -81,10 +81,10 @@
                 <p>Logo and branding desing for Lower Merion Conservancy.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/lmc-1.jpg">
+                        <img src="/images/lmc-1.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/lmc-2-2.jpg">
+                        <img src="/images/lmc-2-2.jpg">
                     </div>
                 </div>
             </div>
@@ -93,10 +93,10 @@
                 <p>Logo redesign for the ChangeMakers! Exhibition at LUAG.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/changemakers-1.jpg">
+                        <img src="/images/changemakers-1.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/changemakers-2.jpg">
+                        <img src="/images/changemakers-2.jpg">
                     </div>
                 </div>
             </div>
@@ -105,10 +105,10 @@
                 <p>Logo and branding for GoBetwixt! The Game of Knocking In Between.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/gobetwixt-1.jpg">
+                        <img src="/images/gobetwixt-1.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/gobetwixt-2.jpg">
+                        <img src="/images/gobetwixt-2.jpg">
                     </div>
                 </div>
             </div>
@@ -117,10 +117,10 @@
                 <p>A voting campaign targeted for nature and wildlife lovers.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/theycantvote-2.jpg">
+                        <img src="/images/theycantvote-2.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/theycantvote-1.jpg">
+                        <img src="/images/theycantvote-1.jpg">
                     </div>
                 </div>
             </div>
@@ -129,10 +129,10 @@
                 <p>Redesigning a cover for the classic Kodak How-To books. Shot on 35mm film.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/kodakredesign-1.jpg">
+                        <img src="/images/kodakredesign-1.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/kodakredesign-2.jpg">
+                        <img src="/images/kodakredesign-2.jpg">
                     </div>
                 </div>
             </div>
@@ -141,10 +141,10 @@
                 <p>Poster and mockup for a concept mountian biking event.</p>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="../images/summersolstice-2.jpg">
+                        <img src="/images/summersolstice-2.jpg">
                     </div>
                     <div class="image-item">
-                        <img src="../images/summersolstic-1.jpg">
+                        <img src="/images/summersolstic-1.jpg">
                     </div>
                 </div>
             </div>
