--- a/pages/film.html
+++ b/pages/film.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>              
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>              
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -23,11 +23,11 @@
                 </div>                
                 <div class="nav-links"> 
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="../pages/people.html"><p>People</p></a>
-                    <a href="../pages/planet.html"><p>Planet</p></a>
-                    <a href="../pages/film.html"><p>Film</p></a>
-                    <a href="../pages/design.html"><p>Design</p></a>
-                    <a href="../pages/about.html"><p>About</p></a>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
