--- a/pages/planet.html
+++ b/pages/planet.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -23,47 +23,47 @@
                 </div>                
                 <div class="nav-links"> 
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="../pages/people.html"><p>People</p></a>
-                    <a href="../pages/planet.html"><p>Planet</p></a>
-                    <a href="../pages/film.html"><p>Film</p></a>
-                    <a href="../pages/design.html"><p>Design</p></a>
-                    <a href="../pages/about.html"><p>About</p></a>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
         <div class="photo-column">
             <div class="masonry-gallery">
-                <img src="../images/planet-1.jpg">
-                <img src="../images/planet-21.jpg">
-                <img src="../images/planet-2.jpg">
-                <img src="../images/planet-22.jpg">
-                <img src="../images/planet-3.jpg">
-                <img src="../images/planet-23.jpg">
-                <img src="../images/planet-4.jpg">
-                <img src="../images/planet-31.jpg">
-                <img src="../images/planet-24.jpg">
-                <img src="../images/planet-5.jpg">
-                <img src="../images/planet-6.jpg">
-                <img src="../images/planet-15.jpg">
-                <img src="../images/planet-16.jpg">
-                <img src="../images/planet-17.jpg">
-                <img src="../images/planet-18.jpg">
-                <img src="../images/planet-19.jpg">
-                <img src="../images/planet-20.jpg">
-                <img src="../images/planet-25.jpg">
-                <img src="../images/planet-28.jpg">
-                <img src="../images/planet-29.jpg">
-                <img src="../images/planet-30.jpg">
-                <img src="../images/planet-7.jpg">
-                <img src="../images/planet-26.jpg">
-                <img src="../images/planet-8.jpg">
-                <img src="../images/planet-27.jpg">
-                <img src="../images/planet-9.jpg">
-                <img src="../images/planet-10.jpg">
-                <img src="../images/planet-11.jpg">
-                <img src="../images/planet-12.jpg">
-                <img src="../images/planet-13.jpg">
-                <img src="../images/planet-14.jpg">
+                <img src="/images/planet-1.jpg">
+                <img src="/images/planet-21.jpg">
+                <img src="/images/planet-2.jpg">
+                <img src="/images/planet-22.jpg">
+                <img src="/images/planet-3.jpg">
+                <img src="/images/planet-23.jpg">
+                <img src="/images/planet-4.jpg">
+                <img src="/images/planet-31.jpg">
+                <img src="/images/planet-24.jpg">
+                <img src="/images/planet-5.jpg">
+                <img src="/images/planet-6.jpg">
+                <img src="/images/planet-15.jpg">
+                <img src="/images/planet-16.jpg">
+                <img src="/images/planet-17.jpg">
+                <img src="/images/planet-18.jpg">
+                <img src="/images/planet-19.jpg">
+                <img src="/images/planet-20.jpg">
+                <img src="/images/planet-25.jpg">
+                <img src="/images/planet-28.jpg">
+                <img src="/images/planet-29.jpg">
+                <img src="/images/planet-30.jpg">
+                <img src="/images/planet-7.jpg">
+                <img src="/images/planet-26.jpg">
+                <img src="/images/planet-8.jpg">
+                <img src="/images/planet-27.jpg">
+                <img src="/images/planet-9.jpg">
+                <img src="/images/planet-10.jpg">
+                <img src="/images/planet-11.jpg">
+                <img src="/images/planet-12.jpg">
+                <img src="/images/planet-13.jpg">
+                <img src="/images/planet-14.jpg">
             </div>
         </div>
         <div class="site-footer">
