--- a/pages/people.html
+++ b/pages/people.html
@@ -33,34 +33,36 @@
         </div>
         <div class="photo-column">
             <div class="masonry-gallery">
-                <img src="/images/people-1.jpg">
-                <img src="/images/people-2.jpg">
-                <img src="/images/people-20.jpg">
-                <img src="/images/people-21.jpg">
-                <img src="/images/people-22.jpg">
-                <img src="/images/people-5.jpg">
-                <img src="/images/people-6.jpg">
-                <img src="/images/people-7.jpg">
-                <img src="/images/people-8.jpg">
-                <img src="/images/people-9.jpg">
-                <img src="/images/people-29.jpg">
-                <img src="/images/people-14.jpg">
-                <img src="/images/people-15.jpg">
-                <img src="/images/people-16.jpg">
-                <img src="/images/people-17.jpg">
-                <img src="/images/people-18.jpg">
-                <img src="/images/people-11.jpg">
-                <img src="/images/people-12.jpg">
-                <img src="/images/people-13.jpg">
-                <img src="/images/people-3.jpg">
-                <img src="/images/people-4.jpg">
-                <img src="/images/people-19.jpg">
-                <img src="/images/people-23.jpg">
-                <img src="/images/people-24.jpg">
-                <img src="/images/people-25.jpg">
-                <img src="/images/people-26.jpg">
-                <img src="/images/people-27.jpg">
-                <img src="/images/people-30.jpg">
+                <img src="/images/people-1.jpg" class="three-two">
+                <img src="/images/people-2.jpg" class="two-three">
+                <img src="/images/people-20.jpg" class="three-two">
+                <img src="/images/people-28.jpg" class="two-three">
+                <img src="/images/people-21.jpg" class="three-two">
+                <img src="/images/people-27.jpg" class="two-three">
+                <img src="/images/people-5.jpg" class="three-two">
+                <img src="/images/people-6.jpg" class="three-two">
+                <img src="/images/people-7.jpg" class="two-three">
+                <img src="/images/people-8.jpg" class="three-two">
+                <img src="/images/people-9.jpg" class="three-two">
+                <img src="/images/people-29.jpg" class="three-two">
+                <img src="/images/people-14.jpg" class="three-two">
+                <img src="/images/people-15.jpg" class="three-two">
+                <img src="/images/people-16.jpg" class="three-two">
+                <img src="/images/people-30.jpg" class="three-two">
+                <img src="/images/people-18.jpg" class="three-two">
+                <img src="/images/people-11.jpg" class="two-three">
+                <img src="/images/people-12.jpg" class="three-two">
+                <img src="/images/people-13.jpg" class="three-two">
+                <img src="/images/people-3.jpg" class="two-three">
+                <img src="/images/people-19.jpg" class="two-three">
+                <img src="/images/people-4.jpg" class="two-three">
+                <img src="/images/people-23.jpg" class="two-three">
+                <img src="/images/people-24.jpg" class="three-two">
+                <img src="/images/people-25.jpg" class="three-two">
+                <img src="/images/people-17.jpg" class="two-three">
+                <img src="/images/people-22.jpg" class="two-three">
+                <img src="/images/people-26.jpg" class="three-two">
+                <img src="/images/people-10.jpg" class="two-three">
             </div>
         </div>
         <div class="site-footer">
