--- a/pages/planet.html
+++ b/pages/planet.html
@@ -33,37 +33,37 @@
         </div>
         <div class="photo-column">
             <div class="masonry-gallery">
-                <img src="/images/planet-1.jpg">
-                <img src="/images/planet-21.jpg">
-                <img src="/images/planet-2.jpg">
-                <img src="/images/planet-22.jpg">
-                <img src="/images/planet-3.jpg">
-                <img src="/images/planet-23.jpg">
-                <img src="/images/planet-4.jpg">
-                <img src="/images/planet-31.jpg">
-                <img src="/images/planet-24.jpg">
-                <img src="/images/planet-5.jpg">
-                <img src="/images/planet-6.jpg">
-                <img src="/images/planet-15.jpg">
-                <img src="/images/planet-16.jpg">
-                <img src="/images/planet-17.jpg">
-                <img src="/images/planet-18.jpg">
-                <img src="/images/planet-19.jpg">
-                <img src="/images/planet-20.jpg">
-                <img src="/images/planet-25.jpg">
-                <img src="/images/planet-28.jpg">
-                <img src="/images/planet-29.jpg">
-                <img src="/images/planet-30.jpg">
-                <img src="/images/planet-7.jpg">
-                <img src="/images/planet-26.jpg">
-                <img src="/images/planet-8.jpg">
-                <img src="/images/planet-27.jpg">
-                <img src="/images/planet-9.jpg">
-                <img src="/images/planet-10.jpg">
-                <img src="/images/planet-11.jpg">
-                <img src="/images/planet-12.jpg">
-                <img src="/images/planet-13.jpg">
-                <img src="/images/planet-14.jpg">
+                <img src="/images/planet-1.jpg" class="three-two">
+                <img src="/images/planet-21.jpg" class="three-two">
+                <img src="/images/planet-2.jpg" class="three-two">
+                <img src="/images/planet-22.jpg" class="three-two">
+                <img src="/images/planet-3.jpg" class="three-two">
+                <img src="/images/planet-23.jpg" class="three-two">
+                <img src="/images/planet-4.jpg" class="three-two">
+                <img src="/images/planet-31.jpg" class="three-two">
+                <img src="/images/planet-24.jpg" class="three-two">
+                <img src="/images/planet-5.jpg" class="three-two">
+                <img src="/images/planet-6.jpg" class="three-two">
+                <img src="/images/planet-15.jpg" class="three-two">
+                <img src="/images/planet-16.jpg" class="three-two">
+                <img src="/images/planet-17.jpg" class="three-two">
+                <img src="/images/planet-18.jpg" class="three-two">
+                <img src="/images/planet-19.jpg" class="three-two">
+                <img src="/images/planet-20.jpg" class="three-two">
+                <img src="/images/planet-25.jpg" class="three-two">
+                <img src="/images/planet-28.jpg" class="three-two">
+                <img src="/images/planet-29.jpg" class="three-two">
+                <img src="/images/planet-30.jpg" class="three-two">
+                <img src="/images/planet-7.jpg" class="three-two">
+                <img src="/images/planet-26.jpg" class="three-two">
+                <img src="/images/planet-8.jpg" class="three-two">
+                <img src="/images/planet-27.jpg" class="three-two">
+                <img src="/images/planet-9.jpg" class="three-two">
+                <img src="/images/planet-10.jpg" class="three-two">
+                <img src="/images/planet-11.jpg" class="three-two">
+                <img src="/images/planet-12.jpg" class="three-two">
+                <img src="/images/planet-13.jpg" class="three-two">
+                <img src="/images/planet-14.jpg" class="three-two">
             </div>
         </div>
         <div class="site-footer">
