--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,8 @@
                 <img src="/images/me-2-2.jpg">
                 <h2>For the spirit of adventure</h2>
                 <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon to the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection—in the wild, through photographs, and with storytelling.</p>
-                <p>For the last five years, I have had the privilege to connect with my clients and tell their stories, and I’d love to be a part of yours. Contact me for more information on events, elopements, portraits, creative shoots, and conservation work anywhere in the U.S.!</p>
+                <p>In 2024, I showcased my work in Things That Fly, a solo exhibition at Cafe the Lodge in Bethlehem, PA, highlighting the relationships between birds and their habitats.</p>
+                <p>Contact me for pricing tailored to your event, portrait session, elopement, or creative shoot. I am based in Pennsylvania but will travel anywhere in the U.S.!</p>
                 <p class="clients-heading">Current and Past Clients:</p>
                 <ul class="list-items">
                     <li>Red Bull</li>
