--- a/pages/design.html
+++ b/pages/design.html
@@ -138,7 +138,7 @@
             </div>
             <div class="image-module">
                 <h2>Summer Solstice</h2>
-                <p>Poster and mockup for a concept mountian biking event.</p>
+                <p>Poster and mockup for a concept mountain biking event.</p>
                 <div class="image-row">
                     <div class="image-item">
                         <img src="/images/summersolstice-2.jpg">
