--- a/pages/sports.html
+++ b/pages/sports.html
@@ -8,26 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="grid">
         <div class="photo-column">
             <div class="gallery-wrap">
                  <div class="masonry-gallery">
-                    <img src="../images/collegiatesports-1.jpeg" alt="">
-                    <img src="../images/collegiatesports-2.jpeg" alt="">
-                    <img src="../images/collegiatesports-3.jpeg" alt="">
-                    <img src="../images/collegiatesports-4.jpeg" alt="">
-                    <img src="../images/collegiatesports-5.jpeg" alt="">
-                    <img src="../images/collegiatesports-6.jpeg" alt="">
-                    <img src="../images/collegiatesports-7.jpeg" alt="">
-                    <img src="../images/collegiatesports-8.jpeg" alt="">
-                    <img src="../images/collegiatesports-9.jpeg" alt="">
-                    <img src="../images/collegiatesports-10.jpeg" alt="">
-                    <img src="../images/collegiatesports-11.jpeg" alt="">
-                    <img src="../images/collegiatesports-12.jpeg" alt="">
+                    <img src="/images/collegiatesports-1.jpeg" alt="">
+                    <img src="/images/collegiatesports-2.jpeg" alt="">
+                    <img src="/images/collegiatesports-3.jpeg" alt="">
+                    <img src="/images/collegiatesports-4.jpeg" alt="">
+                    <img src="/images/collegiatesports-5.jpeg" alt="">
+                    <img src="/images/collegiatesports-6.jpeg" alt="">
+                    <img src="/images/collegiatesports-7.jpeg" alt="">
+                    <img src="/images/collegiatesports-8.jpeg" alt="">
+                    <img src="/images/collegiatesports-9.jpeg" alt="">
+                    <img src="/images/collegiatesports-10.jpeg" alt="">
+                    <img src="/images/collegiatesports-11.jpeg" alt="">
+                    <img src="/images/collegiatesports-12.jpeg" alt="">
                 </div>
             </div>
         </div>
