--- a/pages/events.html
+++ b/pages/events.html
@@ -13,36 +13,66 @@
 </head>
 <body>
     <div class="grid">
-        <div class="photo-column">
-            <div class="gallery-wrap">
-                 <div class="masonry-gallery">
-                    <img src="/images/events-1.jpeg">
-                    <img src="/images/events-2.jpeg">
-                    <img src="/images/events-3.jpeg">
-                    <img src="/images/events-4.jpeg">
-                    <img src="/images/events-5.jpeg">
-                    <img src="/images/events-6.jpeg">
-                    <img src="/images/events-7.jpeg">
-                    <img src="/images/events-8.jpeg">
-                    <img src="/images/events-9.jpeg">
-                    <img src="/images/events-10.jpeg">
-                    <img src="/images/events-11.jpeg">
-                    <img src="/images/events-12.jpeg">
-                    <img src="/images/events-13.jpeg">
-                    <img src="/images/events-14.jpeg">
-                    <img src="/images/events-15.jpeg">
-                    <img src="/images/events-16.jpeg">
-                    <img src="/images/events-17.jpeg">
-                    <img src="/images/events-18.jpeg">
-                    <img src="/images/events-19.jpeg">
-                    <img src="/images/events-20.jpeg">
-                    <img src="/images/events-21.jpeg">
-                    <img src="/images/events-22.jpeg">
-                    <img src="/images/events-23.jpeg">
-                    <img src="/images/events-24.jpeg">
+        <div class="sticky-nav">
+            <div class="nav-column">
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>
+                <div class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="nav-links"> 
+                    <button class="menu-close" aria-label="Close menu">&times;</button>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
+        <div class="photo-column">
+            <div class="masonry-gallery">
+                <img src="/images/otherstuff/events-1.jpg">
+                <img src="/images/otherstuff/events-2.jpg">
+                <img src="/images/otherstuff/events-3.jpg">
+                <img src="/images/otherstuff/events-4.jpg">
+                <img src="/images/otherstuff/events-5.jpg">
+                <img src="/images/otherstuff/events-6.jpg">
+                <img src="/images/otherstuff/events-7.jpg">
+                <img src="/images/otherstuff/events-8.jpg">
+                <img src="/images/otherstuff/events-9.jpg">
+                <img src="/images/otherstuff/events-10.jpg">
+                <img src="/images/otherstuff/events-11.jpg">
+                <img src="/images/otherstuff/events-12.jpg">
+                <img src="/images/otherstuff/events-13.jpg">
+                <img src="/images/otherstuff/events-14.jpg">
+                <img src="/images/otherstuff/events-15.jpg">
+                <img src="/images/otherstuff/events-16.jpg">
+                <img src="/images/otherstuff/events-17.jpg">
+                <img src="/images/otherstuff/events-18.jpg">
+                <img src="/images/otherstuff/events-19.jpg">
+                <img src="/images/otherstuff/events-20.jpg">
+                <img src="/images/otherstuff/events-21.jpg">
+                <img src="/images/otherstuff/events-22.jpg">
+                <img src="/images/otherstuff/events-23.jpg">
+                <img src="/images/otherstuff/events-24.jpg">
+            </div>
+        </div>
+        <div class="nav-links-2">
+            <p>See Also:</p>
+            <a href="/pages/events.html"><p>Events and Marketing</p></a>
+            <a href="/pages/seniors.html"><p>Senior Portraits</p></a>
+            <a href="/pages/sports.html"><p>Collegiate Sports</p></a>
+        </div>
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
+    </div>
+    <div class="lightbox" aria-hidden="true">
+        <button class="lightbox-close" aria-label="Close">&times;</button>
+        <img class="lightbox-image" src="" alt="">
     </div>
 </body>
 </html>
