--- a/pages/people.html
+++ b/pages/people.html
@@ -65,6 +65,12 @@
                 <img src="/images/people-10.jpg" class="two-three">
             </div>
         </div>
+        <div class="nav-links-2"> 
+            <p>See Also:</p>
+            <a href="/pages/events.html"><p>Events and Marketing</p></a>
+            <a href="/pages/seniors.html"><p>Senior Portraits</p></a>
+            <a href="/pages/sports.html"><p>Collegiate Sports</p></a>
+        </div>
         <div class="site-footer">
             <p>The Planet and its People.</p>
             <p>Copyright 2026 Holly Fasching Photography.</p>
