--- a/pages/sports.html
+++ b/pages/sports.html
@@ -13,27 +13,54 @@
 </head>
 <body>
     <div class="grid">
-        <div class="photo-column">
-            <div class="gallery-wrap">
-                 <div class="masonry-gallery">
-                    <img src="/images/collegiatesports-1.jpeg" alt="">
-                    <img src="/images/collegiatesports-2.jpeg" alt="">
-                    <img src="/images/collegiatesports-3.jpeg" alt="">
-                    <img src="/images/collegiatesports-4.jpeg" alt="">
-                    <img src="/images/collegiatesports-5.jpeg" alt="">
-                    <img src="/images/collegiatesports-6.jpeg" alt="">
-                    <img src="/images/collegiatesports-7.jpeg" alt="">
-                    <img src="/images/collegiatesports-8.jpeg" alt="">
-                    <img src="/images/collegiatesports-9.jpeg" alt="">
-                    <img src="/images/collegiatesports-10.jpeg" alt="">
-                    <img src="/images/collegiatesports-11.jpeg" alt="">
-                    <img src="/images/collegiatesports-12.jpeg" alt="">
+        <div class="sticky-nav">
+            <div class="nav-column">
+                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>
+                <div class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="nav-links"> 
+                    <button class="menu-close" aria-label="Close menu">&times;</button>
+                    <a href="/pages/people.html"><p>People</p></a>
+                    <a href="/pages/planet.html"><p>Planet</p></a>
+                    <a href="/pages/film.html"><p>Film</p></a>
+                    <a href="/pages/design.html"><p>Design</p></a>
+                    <a href="/pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
+        <div class="photo-column">
+            <div class="masonry-gallery">
+                <img src="/images/otherstuff/collegiatesports-1.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-2.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-3.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-4.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-5.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-6.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-7.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-8.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-9.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-10.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-11.jpg" alt="">
+                <img src="/images/otherstuff/collegiatesports-12.jpg" alt="">
+            </div>
+        </div>
+        <div class="nav-links-2"> 
+            <p>See Also:</p>
+            <a href="/pages/events.html"><p>Events and Marketing</p></a>
+            <a href="/pages/seniors.html"><p>Senior Portraits</p></a>
+            <a href="/pages/sports.html"><p>Collegiate Sports</p></a>
+        </div>
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
+    </div>
+    <div class="lightbox" aria-hidden="true">
+        <button class="lightbox-close" aria-label="Close">&times;</button>
+        <img class="lightbox-image" src="" alt="">
     </div>
 </body>
-
-
-
 </html>
