--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/script.js" defer></script>
 </head>
@@ -15,7 +15,7 @@
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="/index.html" class="logo"><img src="/images/samplelogo.jpg"></a>  
+                <a href="/index.html" class="logo"><img src="/images/logo.png"></a>  
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
@@ -35,9 +35,9 @@
             <div class="text-wrap">
                 <img src="/images/me-2-2.jpg">
                 <h2>For the spirit of adventure</h2>
+                <p>Most at home in the trees, the dirt, and sprawling wild lands, I photograph and document the natural world—the backcountry of the Wind River Range, February in the Slide Wilderness, and the dark skies of Southern Utah.</p>
+                <p>In 2024, I was featured in the Audubon Photography Awards: The Top 100, and showcased my work in Things That Fly, a solo exhibition highlighting the relationships between birds and their habitats. In 2025, I began filming my first documentary, Fifth is First, and connected with a community of cyclocross racers of all backgrounds. I look forward to showing more of my work at the John James Audubon Center this April.</p>
                 <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon to the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection—in the wild, through photographs, and with storytelling.</p>
-                <p>In 2024, I showcased my work in Things That Fly, a solo exhibition at Cafe the Lodge in Bethlehem, PA, highlighting the relationships between birds and their habitats.</p>
-                <p>Contact me for pricing tailored to your event, portrait session, elopement, or creative shoot. I am based in Pennsylvania but will travel anywhere in the U.S.!</p>
                 <p class="clients-heading">Current and Past Clients:</p>
                 <ul class="list-items">
                     <li>Red Bull</li>
