--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
                 <img src="/images/me-2-2.jpg">
                 <h2>For the spirit of adventure</h2>
                 <p>Most at home in the trees, the dirt, and sprawling wild lands, I photograph and document the natural world—the backcountry of the Wind River Range, February in the Slide Wilderness, and the dark skies of Southern Utah.</p>
-                <p>In 2024, I was featured in the Audubon Photography Awards: The Top 100, and showcased my work in Things That Fly, a solo exhibition highlighting the relationships between birds and their habitats. In 2025, I began filming my first documentary, Fifth is First, and connected with a community of cyclocross racers of all backgrounds. I look forward to showing more of my work at the John James Audubon Center this April.</p>
+                <p>In 2024, I was featured in the Audubon Photography Awards: The Top 100, and showcased my work in Things That Fly, a solo exhibition highlighting the relationships between birds and their habitats. In 2025, I began filming my first documentary, Fifth is First, and connected with a community of cyclocross racers of all backgrounds. I look forward to showing more of my work this April at the John James Audubon Center in a group mentor-mentee exhibition.</p>
                 <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon to the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection—in the wild, through photographs, and with storytelling.</p>
                 <p class="clients-heading">Current and Past Clients:</p>
                 <ul class="list-items">
