--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="index.html" class="logo"><img src="/images/samplelogo.jpg"></a>
+                <a href="index.html" class="logo"><img src="/images/logo.png"></a>
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
